--- a/Homework12/Hw12/Hw12.csproj
+++ b/Homework12/Hw12/Hw12.csproj
@@ -7,9 +7,18 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <Optimize>true</Optimize>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.11" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Homework6\Hw6\Hw6.fsproj" />
+      <ProjectReference Include="..\..\Homework8\Hw8\Hw8.csproj" />
     </ItemGroup>
 
 </Project>
