--- a/Homework12/Hw12/Hw12.csproj
+++ b/Homework12/Hw12/Hw12.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.11" />
+      <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.3.8" />
     </ItemGroup>
 
     <ItemGroup>
