--- a/Homework8/Hw8/Hw8.csproj
+++ b/Homework8/Hw8/Hw8.csproj
@@ -19,4 +19,8 @@
 
 
 
+    <ItemGroup>
+      <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.3.8" />
+    </ItemGroup>
+
 </Project>
