--- a/Homework13/Hw.13/Hw13.csproj
+++ b/Homework13/Hw.13/Hw13.csproj
@@ -8,8 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.13.1" />
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
       <PackageReference Include="JetBrains.dotMemoryUnit" Version="3.2.20220510" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\Homework10\Hw10\Hw10.csproj" />
     </ItemGroup>
 
 </Project>
